@@ -19,5 +19,5 @@ subplot(212, axisbg='y')
 title('blue should be down')
 imshow(x, origin='lower', interpolation='nearest')
 #axis(lim)
-#savefig('test.eps')
+savefig('image_origin.eps')
 show()
