@@ -26,18 +26,20 @@ public:
   Py::Object apply_rotation(const Py::Tuple& args);
   Py::Object apply_scaling(const Py::Tuple& args);
   Py::Object apply_translation(const Py::Tuple& args);
-  Py::Object as_str(const Py::Tuple& args);
+  Py::Object as_rgba_str(const Py::Tuple& args, const Py::Dict& kwargs);
   Py::Object buffer_argb32(const Py::Tuple& args);
   Py::Object buffer_rgba(const Py::Tuple& args);
   Py::Object reset_matrix(const Py::Tuple& args);
   Py::Object resize(const Py::Tuple& args, const Py::Dict& kwargs);
   Py::Object get_aspect(const Py::Tuple& args);
   Py::Object get_size(const Py::Tuple& args);
+  Py::Object get_size_out(const Py::Tuple& args);
   Py::Object get_interpolation(const Py::Tuple& args);
   Py::Object set_interpolation(const Py::Tuple& args);
   Py::Object set_aspect(const Py::Tuple& args);
   Py::Object write_png(const Py::Tuple& args);
   Py::Object set_bg(const Py::Tuple& args);
+  Py::Object flipud(const Py::Tuple& args);
 
   enum {NEAREST,
 	BILINEAR,
@@ -76,22 +78,24 @@ private:
   Py::Dict __dict__;
   agg::trans_affine srcMatrix, imageMatrix;
 
-
+  agg::int8u* buffer_flipud();
   static char apply_rotation__doc__[];
   static char apply_scaling__doc__[];
   static char apply_translation__doc__[];
-  static char as_str__doc__[];
+  static char as_rgba_str__doc__[];
   static char buffer_argb32__doc__[];
   static char buffer_rgba__doc__[];
   static char reset_matrix__doc__[];
   static char resize__doc__[];
   static char get_aspect__doc__[];
   static char get_size__doc__[];
+  static char get_size_out__doc__[];
   static char get_interpolation__doc__[];
   static char set_interpolation__doc__[];
   static char set_aspect__doc__[];
   static char write_png__doc__[];
   static char set_bg__doc__[];
+  static char flipud__doc__[];
 
 };
 
